# pre-commit-venv

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
pre_commit_venv_wrapper/: __main__.py
