[project]
name = "pre_commit_venv_wrapper"
version = "0.0.0"
# for | in typing
requires-python = ">= 3.10"

[project.scripts]
pre-commit-venv-wrapper = "pre_commit_venv_wrapper.__main__:script"


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]


[tool.mypy]
strict = true
files = ["pre_commit_venv_wrapper"]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I",  # isort
]
